--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.1.1",
     "react-scripts": "^5.0.1",
     "sass": "^1.45.0",
