--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
     "react": "^17.0.2",
